# orion

./: .gitignore  Cargo.toml  README.md  keys.blend  keys.blend1  piano_game.py  requirements.txt
assets/models/: black_key_3.gltf
assets/songs/: happy_bday_v1.mid
src/: audio.rs  gizmo.rs  keys.rs  main.rs  mic.rs  piano.rs  record_visualizer.rs  songs.rs  synth.rs  ui.rs
src/basic_pitch/: TODO.md
src/bevy_fundsp/: backend.rs  dsp_graph.rs  dsp_manager.rs  dsp_source.rs  mod.rs
src/bevy_fundsp/backend/: bevy_audio.rs
src/bevy_mic/: audio_output.rs  microphone.rs  mod.rs
src/bevy_midi/: input.rs  mod.rs  output.rs
src/game/: environment.rs  game_main.rs  gizmo.rs  mod.rs
src/midi/: bevy_plugin.rs  bevy_resource.rs  connection.rs  game.rs  midi_key_listener.rs  mod.rs  piano.rs
src/midi/songs/: insomnia.rs  mod.rs  types.rs
