[package]
name = "orion_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_simple_subsecond_system = { git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system", version = "0.2.0" }
crossbeam-channel = "0.5.15"
midir = "0.10.1"
rodio = "0.20.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
