[package]
name = "orion_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_asset = "0.16.1"
bevy_audio = { version = "0.16.1", features = ["wav"] }
bevy_ecs_macros = "0.16.1"
bevy_procedural_audio = "0.5.0"
bevy_simple_subsecond_system = { git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system", version = "0.2.0" }
crossbeam-channel = "0.5.15"
fundsp = "0.20.0"
midir = "0.10.1"
once_cell = "1.21.3"
rodio = "0.20.1"
uuid = { version = "1.17.0", features = ["v5"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
